[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/the_end.gd" type="Script" id=1]
[ext_resource path="res://assets/new_theme.tres" type="Theme" id=2]

[node name="the_end" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -80.0
margin_right = 130.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="vbox"]
margin_right = 260.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Game Over ! The End"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_retry" type="Button" parent="vbox"]
margin_top = 54.0
margin_right = 260.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_return" type="Button" parent="vbox"]
margin_top = 108.0
margin_right = 260.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "return to title"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="vbox/btn_retry" to="." method="_on_btn_retry_pressed"]
[connection signal="pressed" from="vbox/btn_return" to="." method="_on_btn_return_pressed"]
